--- a/src/main/resources/templates/province.html
+++ b/src/main/resources/templates/province.html
@@ -8,7 +8,22 @@
 </head>
 <body>
 
+<div>
+    <div>
+        <tr>
+            <form th:action="@{/province.html?search}"  method="post" th:object="${mProvinceModel}">
 
+                <td>省份名稱:</td>
+                <td><input type="text" name="mProvinceName" placeholder="请输入省份名稱" class="form-control"/></td>
+
+                <td><input type="submit" value="查询" name="search"/></td>
+                <!--<input type="text" name="username" placeholder="用户名" class="form-control"/>-->
+            </form>
+
+            </tr>
+
+    </div>
+</div>
 
 
 <div layout:fragment="content" class="container">
@@ -32,3 +47,10 @@
 
 </body>
 </html>
+<script>
+
+
+
+
+
+</script>
