--- a/src/main/resources/templates/area.html
+++ b/src/main/resources/templates/area.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:tr="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Area List</title>
+    <title>Area 区域List</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
