--- a/src/main/resources/templates/banner.html
+++ b/src/main/resources/templates/banner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th = "http://www.thymeleaf.org">
 <head>
-    <title>Title</title>
+    <title>轮播图 Title</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
