--- a/src/main/resources/templates/city.html
+++ b/src/main/resources/templates/city.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>city list</title>
+    <title>城市city list</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
