--- a/src/main/resources/templates/province.html
+++ b/src/main/resources/templates/province.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorate="layout">
 <head>
-    <title>success view</title>
+    <title>省列表 success view</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
