--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,11 +8,15 @@
 <div>
     <table class="table table-bordered table-striped">
 
+        <li><a th:href="@{/region/selectProvice}">Product List</a></li>
         <thead>
         <tr>
             <td>id</td>
-            <td>菜单单号</td>
+            <td>菜单编号</td>
             <td>菜单名称</td>
+            <td>菜单路径</td>
+            <td>创建时间</td>
+            <td>操作权限</td>
         </tr>
 
         </thead>
@@ -20,6 +24,13 @@
             <td th:text="${menu.id}">id</td>
             <td th:text="${menu.mMenuNumber}">mMenuNumber</td>
             <td th:text="${menu.mMenuName}">mMenuName</td>
+            <td>
+                <a th:href="@{${menu.mMenuUrl}}" th:text="${menu.mMenuName}">Product List</a>
+            </td>
+            <td th:text="${menu.createTime}">createTime</td>
+            <td th:text="编辑"></td>
+            <td th:text="删除"></td>
+
 
         </tr>
 
