--- a/src/main/resources/templates/largeArea.html
+++ b/src/main/resources/templates/largeArea.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>角色管理 Title</title>
+    <title>大区域管理列表 Title</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
@@ -11,16 +11,15 @@
         <thead>
         <tr>
             <td>id</td>
-            <td>角色编号</td>
-            <td>角色名称</td>
+            <td>大区域名称</td>
+            <td>大区域ID</td>
         </tr>
 
         </thead>
-        <tr th:each="role:${roleList}">
-            <td th:text="${role.id}">id</td>
-            <td th:text="${role.mRoleNumber}">mRoleNumber</td>
-            <td th:text="${role.mRoleName}">mRoleName</td>
-
+        <tr th:each="largeArea:${largeAreaList}">
+            <td th:text="${largeArea.id}">id</td>
+            <td th:text="${largeArea.largeAreaName}">mRoleNumber</td>
+            <td th:text="${largeArea.largeAreaId}">mRoleName</td>
         </tr>
 
     </table>
