--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>角色管理 Title</title>
+    <title>项目经理管理 Title</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
@@ -11,15 +11,15 @@
         <thead>
         <tr>
             <td>id</td>
-            <td>角色编号</td>
-            <td>角色名称</td>
+            <td>项目经理类型</td>
+            <td>项目经理名称</td>
         </tr>
 
         </thead>
-        <tr th:each="role:${roleList}">
-            <td th:text="${role.id}">id</td>
-            <td th:text="${role.mRoleNumber}">mRoleNumber</td>
-            <td th:text="${role.mRoleName}">mRoleName</td>
+        <tr th:each="manager:${managerList}">
+            <td th:text="${manager.id}">id</td>
+            <td th:text="${manager.type}">managerType</td>
+            <td th:text="${manager.name}">managerName</td>
 
         </tr>
 
