--- a/src/main/resources/templates/city.html
+++ b/src/main/resources/templates/city.html
@@ -27,7 +27,7 @@
             <td th:text="${city.mProvinceId}"></td>
         </tr>
     </table>
-
+    <!--<div th:include="fragments/page :: pager" style="width:100%; padding-top:20px; float:right;"></div>-->
 </div>
 
 
