--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,11 +19,13 @@
         <span th:text="${errorMsg}" class="label label-danger"/>
 
         <div class="input-group">
-            <input type="text" name="username" placeholder="用户名" class="form-control"/>
+            <label>用户名：</label>
+            <input type="text" name="mUserAccount" placeholder="用户名" class="form-control"/>
         </div>
 
         <div class="input-group">
-            <input type="password" name="password" placeholder="密  码" class="form-control"/>
+            <label>密码：</label>
+            <input type="password" name="mUserPassword" placeholder="密  码" class="form-control"/>
         </div>
 
         <div class="form-actions">
