--- a/src/main/resources/templates/province.html
+++ b/src/main/resources/templates/province.html
@@ -53,10 +53,17 @@
         </tr>
     </table>
 </div>
+<tr>
 
+    <td colspan="8">
+
+    <td th:text="'共' + ${totalPageNumber} + '条记录'">总数量</td>
+    <td th:text="'共' + ${pageSize} + '页'">共多少页</td>
+    <td th:text="'当前第' + ${number+1} + '页'">当前第多少页</td>
+    <a th:href="@{/region/selectProvice(page=${number-1})}">上一页</a>
+    <a th:href="@{/region/selectProvice(page=${number+1})}">下一页</a>
+    </td>
+</tr>
 </body>
 </html>
-<script>
 
-
-</script>
