--- a/src/main/resources/templates/city.html
+++ b/src/main/resources/templates/city.html
@@ -26,6 +26,7 @@
             <td>城市ID</td>
             <td>城市名称</td>
             <td>省ID</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
         </thead>
 
@@ -34,6 +35,8 @@
             <td th:text="${city.mCityId}"></td>
             <td th:text="${city.mCityName}"></td>
             <td th:text="${city.mProvinceId}"></td>
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
     </table>
 
