--- a/src/main/resources/templates/area.html
+++ b/src/main/resources/templates/area.html
@@ -16,6 +16,7 @@
             <td>区域ID</td>
             <td>区域名称</td>
             <td>城市ID</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
         </thead>
 
@@ -25,7 +26,8 @@
             <td th:text="${area.mAreaId}"></td>
             <td th:text="${area.mAreaName}"></td>
             <td th:text="${area.mCityId}"></td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
     </table>
     <tr>
