--- a/src/main/resources/templates/banner.html
+++ b/src/main/resources/templates/banner.html
@@ -14,6 +14,7 @@
             <td>id</td>
             <td>轮播图名称</td>
             <td>轮播图URL</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -21,7 +22,8 @@
             <td th:text="${mbanner.id}">id</td>
             <td th:text="${mbanner.mBannerName}">mBannerName</td>
             <td th:text="${mbanner.mBannerUrl}">mBannerUrl</td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
     </table>
