--- a/src/main/resources/templates/designer.html
+++ b/src/main/resources/templates/designer.html
@@ -13,6 +13,7 @@
             <td>id</td>
             <td>设计师编号</td>
             <td>设计师名称</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -20,7 +21,8 @@
             <td th:text="${designer.id}">id</td>
             <td th:text="${designer.type}">mRoleName</td>
             <td th:text="${designer.name}">name</td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
     </table>
