--- a/src/main/resources/templates/largeArea.html
+++ b/src/main/resources/templates/largeArea.html
@@ -13,6 +13,7 @@
             <td>id</td>
             <td>大区域名称</td>
             <td>大区域ID</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -20,6 +21,8 @@
             <td th:text="${largeArea.id}">id</td>
             <td th:text="${largeArea.largeAreaName}">mRoleNumber</td>
             <td th:text="${largeArea.largeAreaId}">mRoleName</td>
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
     </table>
