--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -13,6 +13,7 @@
             <td>id</td>
             <td>项目经理类型</td>
             <td>项目经理名称</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -20,7 +21,8 @@
             <td th:text="${manager.id}">id</td>
             <td th:text="${manager.type}">managerType</td>
             <td th:text="${manager.name}">managerName</td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
     </table>
