--- a/src/main/resources/templates/province.html
+++ b/src/main/resources/templates/province.html
@@ -44,12 +44,15 @@
             <td>id</td>
             <td>省份ID</td>
             <td>省份名称</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
         </thead>
         <tr th:each="provice : ${mProvince}">
             <td th:text="${provice.id}">id</td>
             <td th:text="${provice.provinceId}">provinceId</td>
             <td th:text="${provice.mProvinceName}">mProvinceName</td>
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
     </table>
 </div>
