--- a/src/main/resources/templates/role.html
+++ b/src/main/resources/templates/role.html
@@ -13,6 +13,7 @@
             <td>id</td>
             <td>角色编号</td>
             <td>角色名称</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -21,7 +22,8 @@
             <td th:text="${role.id}">id</td>
             <td th:text="${role.mRoleNumber}">mRoleNumber</td>
             <td th:text="${role.mRoleName}">mRoleName</td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
 
