--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -13,6 +13,7 @@
             <td>id</td>
             <td>角色编号</td>
             <td>角色名称</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -20,7 +21,8 @@
             <td th:text="${sales.id}">id</td>
             <td th:text="${sales.saleType}">saleType</td>
             <td th:text="${sales.saleName}">saleName</td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
     </table>
