--- a/src/main/resources/templates/super.html
+++ b/src/main/resources/templates/super.html
@@ -13,6 +13,7 @@
             <td>id</td>
             <td>项目监理类型ID</td>
             <td>项目监理姓名</td>
+            <td colspan="8" align="center">操作权限</td>
         </tr>
 
         </thead>
@@ -20,7 +21,8 @@
             <td th:text="${super.id}">id</td>
             <td th:text="${super.type}">superType</td>
             <td th:text="${super.name}">superName</td>
-
+            <td th:text="编辑" colspan="4" align="center"></td>
+            <td th:text="删除" colspan="4" align="center"></td>
         </tr>
 
     </table>
