--- a/src/main/resources/templates/city.html
+++ b/src/main/resources/templates/city.html
@@ -10,12 +10,17 @@
 
     <div>
 
+        <form th:action="@{/region/searchList}" method="post" th:object="${bannerModel}">
 
-        <tr>
+            <label class="col-md-1 control-label">用户名：</label>
+            <div class="col-md-2">
+                <input type="text" name="mUserName" placeholder="请输入城市名称" class="form-control"/>
+            </div>
+            <div class="form-actions">
+                <input type="submit" value="查询"/>
 
-            <td th:text="${totalPageNumber}">总数量</td>
-            <td th:text="${pageSize}">页面大小</td>
-        </tr>
+            </div>
+        </form>
     </div>
 
     <table class="table table-bordered table-striped">
