--- a/src/main/resources/templates/banner.html
+++ b/src/main/resources/templates/banner.html
@@ -11,9 +11,9 @@
 
     <form th:action="@{/mBanner/searchList}" method="post" th:object="${bannerModel}">
 
-        <label class="col-md-1 control-label">用户名：</label>
+        <label class="col-md-1 control-label">轮播图名称：</label>
         <div class="col-md-2">
-            <input type="text" name="mUserName" placeholder="请输入轮播图名称" class="form-control"/>
+            <input type="text" name="mBannerName" placeholder="请输入轮播图名称" class="form-control"/>
         </div>
         <div class="form-actions">
             <input type="submit" value="查询"/>
