--- a/src/main/resources/templates/area.html
+++ b/src/main/resources/templates/area.html
@@ -10,9 +10,9 @@
 
     <form th:action="@{/region/searchList}" method="post" th:object="${areaModel}">
 
-        <label class="col-md-1 control-label">用户名：</label>
+        <label class="col-md-1 control-label">区域名称：</label>
         <div class="col-md-2">
-            <input type="text" name="mUserName" placeholder="请输入区域名称" class="form-control"/>
+            <input type="text" name="mAreaName" placeholder="请输入区域名称" class="form-control"/>
         </div>
         <div class="form-actions">
             <input type="submit" value="查询"/>
