--- a/src/main/resources/templates/city.html
+++ b/src/main/resources/templates/city.html
@@ -12,9 +12,9 @@
 
         <form th:action="@{/region/searchList}" method="post" th:object="${bannerModel}">
 
-            <label class="col-md-1 control-label">用户名：</label>
+            <label class="col-md-1 control-label">城市名称：</label>
             <div class="col-md-2">
-                <input type="text" name="mUserName" placeholder="请输入城市名称" class="form-control"/>
+                <input type="text" name="mCityName" placeholder="请输入城市名称" class="form-control"/>
             </div>
             <div class="form-actions">
                 <input type="submit" value="查询"/>
