--- a/src/main/resources/templates/designer.html
+++ b/src/main/resources/templates/designer.html
@@ -5,6 +5,24 @@
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
+
+<div>
+
+    <form th:action="@{/tDepartmentDesigner/searchList}" method="post" th:object="${tDepartmentDesignerModel}">
+
+        <label class="col-md-1 control-label">用户名：</label>
+        <div class="col-md-2">
+            <input type="text" name="name" placeholder="请输入设计师名称" class="form-control"/>
+        </div>
+        <div class="form-actions">
+            <input type="submit" value="查询"/>
+
+        </div>
+    </form>
+
+</div>
+
+
 <div>
     <table class="table table-bordered table-striped">
 
