--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -5,6 +5,22 @@
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
+
+<div>
+
+    <form th:action="@{/tDepartmentFinance/searchList}" method="post" th:object="${tDepartmentFinanceModel}">
+
+        <label class="col-md-1 control-label">用户名：</label>
+        <div class="col-md-2">
+            <input type="text" name="name" placeholder="请输入财务人员名称" class="form-control"/>
+        </div>
+        <div class="form-actions">
+            <input type="submit" value="查询"/>
+
+        </div>
+    </form>
+
+</div>
 <div>
     <table class="table table-bordered table-striped">
 
