--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -5,6 +5,22 @@
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
+
+<div>
+
+    <form th:action="@{/tDepartmentManager/searchList}" method="post" th:object="${tDepartmentManagerModel}">
+
+        <label class="col-md-1 control-label">大区域名称：</label>
+        <div class="col-md-2">
+            <input type="text" name="name" placeholder="请输入大区域名称" class="form-control"/>
+        </div>
+        <div class="form-actions">
+            <input type="submit" value="查询"/>
+
+        </div>
+    </form>
+
+</div>
 <div>
     <table class="table table-bordered table-striped">
 
