--- a/src/main/resources/templates/role.html
+++ b/src/main/resources/templates/role.html
@@ -6,6 +6,21 @@
 </head>
 <body>
 <div>
+
+    <form th:action="@{/mRole/searchList}" method="post" th:object="${mRoleModel}">
+
+        <label class="col-md-1 control-label">角色名称：</label>
+        <div class="col-md-2">
+            <input type="text" name="mRoleName" placeholder="请输入角色名称" class="form-control"/>
+        </div>
+        <div class="form-actions">
+            <input type="submit" value="查询"/>
+
+        </div>
+    </form>
+</div>
+
+<div>
     <table class="table table-bordered table-striped">
 
         <thead>
