--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -6,6 +6,23 @@
 </head>
 <body>
 <div>
+
+    <form th:action="@{/tDepartmentSales/searchList}" method="post" th:object="${tDepartmentSalesModel}">
+
+        <label class="col-md-1 control-label">销售名称：</label>
+        <div class="col-md-2">
+            <input type="text" name="saleName" placeholder="请输入销售姓名" class="form-control"/>
+        </div>
+        <div class="form-actions">
+            <input type="submit" value="查询"/>
+
+        </div>
+    </form>
+</div>
+
+
+
+<div>
     <table class="table table-bordered table-striped">
 
         <thead>
