--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -31,6 +31,10 @@
             <input type="text" name="mUserTel" placeholder="请输入用户手机号" class="form-control"/>
         </td>
         <td>
+            <label>上传头像:</label>
+            <input type="text" name="mUserTel" placeholder="请选择头像" class="form-control"/>
+        </td>
+        <td>
             <input type="submit" value="保存"/>
         </td>
     </form>
