--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,26 +12,39 @@
 <div>
     <form th:action="@{/user/searchList}" method="post" th:object="${userModel}">
 
-        <label class="col-md-1 control-label">用户名：</label>
-        <div class="col-md-2">
-            <input type="text" name="mUserName" placeholder="请输入用户名" class="form-control"/>
+        <div class="form-group " align="center">
+            <label class="col-md-1 control-label">用户名：</label>
+            <div class="col-md-2">
+                <input type="text" name="mUserName" placeholder="请输入用户名" class="form-control"/>
+            </div>
         </div>
-        <label class="col-md-1 control-label">用户电话：</label>
-        <div class="col-md-2">
-            <input type="text" name="mUserTel" placeholder="请输入用户电话" class="form-control"/>
+        <div class="form-group " align="center">
+
+            <label class="col-md-1 control-label">用户电话：</label>
+            <div class="col-md-2">
+                <input type="text" name="mUserTel" placeholder="请输入用户电话" class="form-control"/>
+            </div>
         </div>
-        <label class="col-md-1 control-label">用户账号：</label>
-        <div class="col-md-2">
-            <input type="text" name="mUserAccount" placeholder="请输入用户账号" class="form-control"/>
+
+        <div class="form-group " align="center">
+            <label class="col-md-1 control-label">用户账号：</label>
+            <div class="col-md-2">
+                <input type="text" name="mUserAccount" placeholder="请输入用户账号" class="form-control"/>
+            </div>
         </div>
+
         <div class="form-actions">
             <input type="submit" value="查询"/>
 
         </div>
+
     </form>
 
-    <a type="button" th:href="@{/user/newUser}">新建用户</a>
+    <div class="form-group" align="center">
 
+        <a type="button" th:href="@{/user/newUser}">新建用户</a>
+
+    </div>
 </div>
 
 
@@ -64,15 +77,17 @@
         <td>
 
             <form th:action="@{/user/delUserById(userId=${user.id})}" th:object="${userModel}" method="post">
-                <button type="submit">Delete删除</button>
+                <button type="submit">删除</button>
             </form>
             <!--<button th:text="删除" th:align="center" data-toggle="modal" data-target="#delModal"-->
-            <!--th:value="${userList.user.id}"-->
-
-            <!--&gt;</button>-->
         </td>
         <td>
-            <button th:text="重置密码" th:align="center" data-toggle="modal" data-target="#resetPsdModal"></button>
+            <form th:action="@{/user/resetPsdModal(userId=${user.id})}" method="post">
+                <button type="submit">重置密码</button>
+            </form>
+            <!--<a href="resetPsdModal.html" th:href="@{/user/resetPsdModal(userId=${user.id})}" type="submit" >重置密码-->
+            <!--</a>-->
+
         </td>
     </tr>
 
