--- a/src/main/resources/templates/designer.html
+++ b/src/main/resources/templates/designer.html
@@ -10,7 +10,7 @@
 
     <form th:action="@{/tDepartmentDesigner/searchList}" method="post" th:object="${tDepartmentDesignerModel}">
 
-        <label class="col-md-1 control-label">用户名：</label>
+        <label class="col-md-1 control-label">设计师名称：</label>
         <div class="col-md-2">
             <input type="text" name="name" placeholder="请输入设计师名称" class="form-control"/>
         </div>
@@ -20,6 +20,12 @@
         </div>
     </form>
 
+
+    <form th:action="@{/tDepartmentDesigner/addView}" method="post">
+
+        <input type="submit">新建</input>
+
+    </form>
 </div>
 
 
@@ -41,6 +47,18 @@
             <td th:text="${designer.name}">name</td>
             <td th:text="编辑" colspan="4" align="center"></td>
             <td th:text="删除" colspan="4" align="center"></td>
+
+            <td>
+
+                <form th:action="@{/tDepartmentDesigner/editView(designerId=${designer.id})}" th:object="${designerModel}" method="post">
+                    <button type="submit">编辑</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/tDepartmentDesigner/deleteDesignerById(designerId=${designer.id})}" th:object="${designerModel}" method="post">
+                    <button type="submit">删除</button>
+                </form>
+            </td>
         </tr>
 
     </table>
