--- a/src/main/resources/templates/editDesigner.html
+++ b/src/main/resources/templates/editDesigner.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Title</title>
+    <title>编辑用户Title</title>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
+<div>
 
+    <form action="/tDepartmentDesigner/editDesigner" method="post" th:object="${designerModel}">
+
+        <td>
+            <input type="hidden" th:field="${designerModel.id}" name="id"
+                   class="form-control"/>
+        </td>
+        <td>
+            <label>设计师姓名:</label>
+            <input type="text" th:field="${designerModel.name}" name="name" placeholder="请输入设计师名称"
+                   class="form-control"/>
+        </td>
+        <td>
+            <label>设计师类别:</label>
+            <input type="text" th:field="${designerModel.type}" name="type" placeholder="请输入设计师类别"
+                   class="form-control"/>
+        </td>
+
+        <input type="submit" th:value="保存"/>
+    </form>
+</div>
 </body>
 </html>
